✨ Add cubic Bézier for `LineString`s

--- a/.swiftpm/xcode/xcshareddata/xcschemes/Turf.xcscheme
+++ b/.swiftpm/xcode/xcshareddata/xcschemes/Turf.xcscheme
@@ -51,6 +51,11 @@
                BlueprintName = "TurfTests"
                ReferencedContainer = "container:">
             </BuildableReference>
+            <SkippedTests>
+               <Test
+                  Identifier = "SnapshotTests">
+               </Test>
+            </SkippedTests>
          </TestableReference>
       </Testables>
    </TestAction>
