--- a/.swiftpm/xcode/xcshareddata/xcschemes/Turf.xcscheme
+++ b/.swiftpm/xcode/xcshareddata/xcschemes/Turf.xcscheme
@@ -40,7 +40,39 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      codeCoverageEnabled = "YES"
+      onlyGenerateCoverageForSpecifiedTargets = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "Turf"
+            BuildableName = "Turf"
+            BlueprintName = "Turf"
+            ReferencedContainer = "container:">
+         </BuildableReference>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "Geodesy"
+            BuildableName = "Geodesy"
+            BlueprintName = "Geodesy"
+            ReferencedContainer = "container:">
+         </BuildableReference>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "WGS84"
+            BuildableName = "WGS84"
+            BlueprintName = "WGS84"
+            ReferencedContainer = "container:">
+         </BuildableReference>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "GeodeticGeometry"
+            BuildableName = "GeodeticGeometry"
+            BlueprintName = "GeodeticGeometry"
+            ReferencedContainer = "container:">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
          <TestableReference
             skipped = "NO">
